--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     <link rel="stylesheet" href="/styles/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap" rel="stylesheet">
     {% endblock %}
 
 </head>
@@ -25,36 +26,45 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item active">
-              <a class="nav-link" href="#">PÁGINA INICIAL<span class="sr-only"></span></a>
+              <a class="nav-link" href="/">PÁGINA INICIAL<span class="sr-only"></span></a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">MOTOS</a>
+            <li class="nav-item pl-2">
+              <a class="nav-link" href="/motorcycle">MOTOS</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">ACESSÓRIOS</a>
+            <li class="nav-item pl-2">
+              <a class="nav-link" href="/acessories">ACESSÓRIOS</a>
             </li>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                 LOGIN
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">CADASTRE-SE</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">ADMINISTRADOR</a>
-                </div>
-              </li>
+            <li class="nav-item pl-2">
+              <a class="nav-link" href="/register">CADASTRE-SE</a>
+            </li>
+            
+            <li class="nav-item dropdown pl-2">
+              <a class="nav-link" href="#">LOGIN</a>
+            </li>
 
+            <li class="nav-item dropdown pl-2">
+              <a class="nav-link" href="#">ADM</a>
+            </li>
+          
           </ul>
+
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Digite aqui" aria-label="Search">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Pesquisar</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Digite aqui">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
           </form>
         </div>
       </nav>
      
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+       <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" charset="utf-8"></script>
+       <script src="https://knockoutjs.com/downloads/knockout-3.5.1.js"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+       <script src="/js/base.js" charset="utf-8"></script>
+       <script src="https://knockoutjs.com/downloads/knockout-3.5.1.js"></script>
     {% block content %}
    
     <!--CONTEUDO DO INDEX-->
@@ -88,10 +98,6 @@
   </footer>
 
     {% block script %}
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" charset="utf-8"></script>  
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/js/base.js" charset="utf-8"></script>
     {% endblock %}
   </body>
 </html>
