--- a/views/motorcycle.html
+++ b/views/motorcycle.html
@@ -1,65 +1,9 @@
 {% extends './layouts/base.html' %}
 
-
-
 {% block content %}
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <a href="/motorcycle">
-        <img class="d-block w-100" src="https://dirtbikelover.com/wp-content/uploads/2019/03/jeffrey-herelings-in-us.jpg" height="700px" alt="First slide">
-      </a> 
-        <div class="carousel-caption d-none d-md-block">
-            <h5>MELHORES MOTOS</h5>
-            <p>VENHA ACELERAR</p>
-          </div>
-      </div>
-
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://http2.mlstatic.com/mini-camera-moto-motocross-12-acessorios-D_NQ_NP_940880-MLB40966888789_032020-F.jpg" height="700px" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>MÁXIMA QUALIDADE</h5>
-            <p>MELHORES PREÇOS</p>
-          </div>
-    </div>
-
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images3.alphacoders.com/730/730452.jpg" height="700px" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>MÁXIMA QUALIDADE</h5>
-            <p>MELHORES PREÇOS</p>
-          </div>
-    </div>
-
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images5.alphacoders.com/940/940912.jpg" height="700px" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>RÁPIDA ENTREGA</h5>
-            <p>DIVERSAS FORMAS DE PAGAMENTO</p>
-          </div>
-    </div>
-    </div>
-
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-<br>
-  <h1 class="title d-flex justify-content-center">Confira nossa linha de produtos</h1>
-<br>
-
+  <h1 class="title d-flex justify-content-center">Encontre a moto certa para você</h1>
+<hr>
 <div class="products">
 
   <div class="container">
@@ -134,6 +78,43 @@
     </div>
   </div>
 
+  <br>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
+              <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
+              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
+              <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
+              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
+              <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
+              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <hr>
@@ -144,11 +125,7 @@
 {% endblock %}
 
 {% block script %}
-<link rel="stylesheet" href="/styles/index.css">
-<script src="/js/index.js" charset="utf-8"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="/styles/motorcycle.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock %}
