Finalizacao da parte de vendas, falta a parte administrativa

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="ptbr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>teste</title>
+    <title>Desing de Interfaces</title>
     
     {% block styles %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -38,17 +38,23 @@
             </li>
 
             <li class="nav-item pl-2">
+              <a class="nav-link" href="/contact">CONTATO</a>
+            </li>
+
+            <li class="nav-item pl-2">
               <a class="nav-link" href="/register">CADASTRE-SE</a>
             </li>
             
             <li class="nav-item dropdown pl-2">
-              <a class="nav-link" href="#">LOGIN</a>
-            </li>
-
-            <li class="nav-item dropdown pl-2">
               <a class="nav-link" href="#">ADM</a>
             </li>
           
+            <li class="nav-item dropdown pl-2">
+              <a href="/carrinho">
+                <img src="https://www.ibid.com.br/blog/wp-content/uploads/2014/12/carrinho-700x560.png" height="40px" width="55px" alt="">
+              </a>
+            </li>
+
           </ul>
 
           <form class="form-inline my-2 my-lg-0">
@@ -76,23 +82,34 @@
     <div class="container text-center text-md-left">
         <div class="row">
             <div class="col1 col-md-4 mx-auto">
-                <p>teste</p>
+              <h5 class="d-flex justify-content-center">SOBRE A EMPRESA</h5>
+                <p class="d-flex justify-content-center">Algo aqui</p>
+                <p class="d-flex justify-content-center">Algo aqui</p>
+                <p class="d-flex justify-content-center">Algo aqui</p>
+                <p class="d-flex justify-content-center">Algo aqui</p>
+                <p class="d-flex justify-content-center">Algo aqui</p>
                 </div>
                 <div class="col2 col-md-4 mx-auto">
-                    <p>teste</p>
+                  <h5 class="d-flex justify-content-center">SOBRE A EMPRESA</h5>
+                  <p class="d-flex justify-content-center">Algo aqui</p>
+                  <p class="d-flex justify-content-center">Algo aqui</p>
+                  <p class="d-flex justify-content-center">Algo aqui</p>
+                  <p class="d-flex justify-content-center">Algo aqui</p>
+                  <p class="d-flex justify-content-center">Algo aqui</p>
                 </div>
-                <div class="col3 col-md-2 mx-auto">
-                    <p>teste</p>
+                <div class="col3 col-md-4 mx-auto">
+                  <h5 class="d-flex justify-content-center">CARTÕES</h5>
+                  <img src="https://www.tudoenxovais.com.br/imagens/cartao-de-credito.png" alt="">
                 </div>
             </div>
         </div>
         <hr>
         <div class="footerLogo text-center">
-            <p>teste</p>
+            <img src="https://seeklogo.com/images/M/MX1_FIM_MOTOCROSS-logo-FC42047DC2-seeklogo.com.png" height="70px" width="90px" alt="">
         </div>
         <hr>
         <div class="text-center text-muted">
-            <p class="small">Desenvolvido por: <i class="fas fa-copyright"></i> Renan Andreolla, Fernando Lise, Heitor Santos, Wesley Santos, Lucas Paludo</p>
+            <p class="small">Desenvolvido por: <i class="fas fa-copyright"></i> Renan Andreolla, Fernando Lise, Wesley Santos, Lucas Paludo</p>
         </div>
 </div>
   </footer>
