--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,19 @@
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://http2.mlstatic.com/mini-camera-moto-motocross-12-acessorios-D_NQ_NP_940880-MLB40966888789_032020-F.jpg" height="700px" alt="Second slide">
+        <a href="/acessories">
+          <img class="d-block w-100" src="https://media.motociclismoonline.com.br/uploads/2019/10/JetroSalazar_brasileirodemotocross_7etapa_creditoidariocafe_mundopress_8813.jpg" height="700px" alt="Second slide">
+        </a>
+        <div class="carousel-caption d-none d-md-block">
+            <h5>MELHORES ACESSÓRIOS</h5>
+            <p>PARA VOCÊ E SUA MOTO</p>
+          </div>
+    </div>
+
+      <div class="carousel-item">
+        <a href="/motorcycle">
+          <img class="d-block w-100" src="https://images3.alphacoders.com/730/730452.jpg" height="700px" alt="Second slide">
+        </a>
         <div class="carousel-caption d-none d-md-block">
             <h5>MÁXIMA QUALIDADE</h5>
             <p>MELHORES PREÇOS</p>
@@ -31,15 +43,9 @@
     </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://images3.alphacoders.com/730/730452.jpg" height="700px" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>MÁXIMA QUALIDADE</h5>
-            <p>MELHORES PREÇOS</p>
-          </div>
-    </div>
-
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images5.alphacoders.com/940/940912.jpg" height="700px" alt="Third slide">
+        <a href="/acessories">
+          <img class="d-block w-100" src="https://images5.alphacoders.com/940/940912.jpg" height="700px" alt="Third slide">
+        </a>
         <div class="carousel-caption d-none d-md-block">
             <h5>RÁPIDA ENTREGA</h5>
             <p>DIVERSAS FORMAS DE PAGAMENTO</p>
@@ -70,7 +76,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -80,7 +86,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -90,7 +96,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -107,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -117,7 +123,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -127,7 +133,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -136,11 +142,10 @@
 
 </div>
 
-<hr>
   {% endblock %}
 
 {% block title %}
-  Página inicial
+  
 {% endblock %}
 
 {% block script %}
