--- a/views/motorcycle.html
+++ b/views/motorcycle.html
@@ -14,7 +14,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -24,7 +24,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -34,7 +34,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -51,7 +51,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -61,7 +61,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -71,7 +71,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -88,7 +88,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -98,7 +98,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="#" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -121,7 +121,7 @@
   {% endblock %}
 
 {% block title %}
-  Página inicial
+  
 {% endblock %}
 
 {% block script %}
