--- a/views/register.html
+++ b/views/register.html
@@ -103,16 +103,16 @@
     <br>
     <div class="row">
         <div class="col-12 mt-4 d-flex justify-content-center">
-            <button type="submit" class="btn btn-dark col-2" id="btnSend" data-bind="click: submitForm">Enviar</button>
+            <a href="#" class="btn d-flex justify-content-center" type="submit" id="btnSend" data-bind="click: submitForm">Cadastrar</a>
             <!-- <a href="/index" class="btn btn-outline-success btn-block float-left col-2" name="button">Voltar</a> -->
         </div>
     </div>
 </form>
-
+<hr>
 {% endblock %}
 
 {% block title %}
-  Cadastre-se
+
 {% endblock %}
 
 {% block script %}
