Pagina de administrador

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -46,7 +46,7 @@
             </li>
             
             <li class="nav-item dropdown pl-2">
-              <a class="nav-link" href="#">ADM</a>
+              <a class="nav-link" href="/loginadm">ADM</a>
             </li>
           
             <li class="nav-item dropdown pl-2">
