Alteracao da cor dos botoes e ajuste no alinhamento do formulario de cadastro

--- a/public/styles/carrinho.css
+++ b/public/styles/carrinho.css
@@ -4,7 +4,6 @@ h1.title {
 }
 
 div.buttons a.orange{
-    background-color: #FF6600;
     color: black;
     font-weight: bold;
     font-family: 'Arvo', serif;
@@ -38,7 +37,6 @@ h5.total {
 }
 
 a.finish{
-    background-color: #FF6600;
     color: black;
     font-weight: bold;
     font-family: 'Arvo', serif;
@@ -55,4 +53,13 @@ h5.mb-3 {
 div.card {
     background-color: rgb(187, 187, 187);
     border: 1px solid black;
+}
+
+div.input-group {
+    margin-left: 40px;
+}
+
+p.remember-password {
+    margin-left: 10px;
+    margin-top: 10px;
 }
