--- a/views/adm.html
+++ b/views/adm.html
@@ -81,7 +81,7 @@
 <br>
 <br>
         <div class="search" style="width: 270px;">
-            <a href="#" class="orange btn btn- d-flex justify-content-center">Buscar</a>
+            <a href="#" class="orange btn btn-success d-flex justify-content-center">Buscar</a>
         </div>
         </form>
       </div>
@@ -94,6 +94,7 @@
                 <th scope="col">Modelo</th>
                 <th scope="col">Ano</th>
                 <th scope="col">Preço</th>
+                <th scope="col">Remover</th>
               </tr>
             </thead>
             <tbody>
@@ -103,6 +104,7 @@
                 <td>Modelo x</td>
                 <td>Ano x</td>
                 <td>Preço x</td>
+                <td><button class="btn btn-danger">Remover</button></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -110,6 +112,7 @@
                 <td>Modelo x</td>
                 <td>Ano x</td>
                 <td>Preço x</td>
+                <td><button class="btn btn-danger">Remover</button></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -117,6 +120,7 @@
                 <td>Modelo x</td>
                 <td>Ano x</td>
                 <td>Preço x</td>
+                <td><button class="btn btn-danger">Remover</button></td>
               </tr>
               <tr>
                 <th scope="row">4</th>
@@ -124,6 +128,7 @@
                 <td>Modelo x</td>
                 <td>Ano x</td>
                 <td>Preço x</td>
+                <td><button class="btn btn-danger">Remover</button></td>
               </tr>
               <tr>
                 <th scope="row">5</th>
@@ -131,21 +136,9 @@
                 <td>Modelo x</td>
                 <td>Ano x</td>
                 <td>Preço x</td>
+                <td><button class="btn btn-danger">Remover</button></td>
               </tr>
-              <tr>
-                <th scope="row">6</th>
-                <td>Marca x</td>
-                <td>Modelo x</td>
-                <td>Ano x</td>
-                <td>Preço x</td>
-              </tr>
-              <tr>
-                <th scope="row">7</th>
-                <td>Marca x</td>
-                <td>Modelo x</td>
-                <td>Ano x</td>
-                <td>Preço x</td>
-              </tr>
+             
             </tbody>
           </table>
       </div>
