--- a/views/product.html
+++ b/views/product.html
@@ -16,7 +16,7 @@
     <img src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" width="50%" alt="">
   </p>
   <hr />
-  <a href="/carrinho" class="btn d-flex justify-content-center">Adicionar ao carrinho</a>
+  <a href="/carrinho" class="btn btn-success d-flex justify-content-center">Adicionar ao carrinho</a>
   <div class="clearfix"></div>
 </div>
 
