--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -86,7 +86,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -96,7 +96,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -123,7 +123,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
@@ -133,7 +133,7 @@
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
-              <a href="/product" class="btn d-flex justify-content-center">Ver detalhes</a>
+              <a href="/product" class="btn btn-outline-dark d-flex justify-content-center">Ver detalhes</a>
             </div>
           </div>
       </div>
