--- a/public/styles/carrinho.css
+++ b/public/styles/carrinho.css
@@ -59,7 +59,7 @@ div.input-group {
     margin-left: 40px;
 }
 
-p.remember-password {
-    margin-left: 10px;
+div.form-check {
+    margin-left: 40px;
     margin-top: 10px;
 }
