--- a/views/loginadm.html
+++ b/views/loginadm.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row d-flex justify-content-center">
           <div class="buttons col-12 col-sm-3 mt-4 text-center">
-            <a href="#" class="orange btn btn-success d-flex justify-content-center" id="enter" type="submit" data-bind="click: submitForm">Entrar</a>
+            <a href="/initadm" class="orange btn btn-success d-flex justify-content-center" id="enter" type="submit" data-bind="click: submitForm">Entrar</a>
           </div>
         </div>
       </form>
