--- a/views/adm.html
+++ b/views/adm.html
@@ -4,8 +4,8 @@
 <div class="div-title">
     <h1 class="title d-flex justify-content-center">Olá administrador</h1>
 </div>
-
-<br>
+<hr>
+<a href="/initadm"><button type="button" class="btn btn-outline-dark ml-2 col-2">Voltar</button></a>
 <hr>
 
 <div class="box">
@@ -90,6 +90,7 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
+                <th scope="col">Nome</th>
                 <th scope="col">Marca</th>
                 <th scope="col">Modelo</th>
                 <th scope="col">Ano</th>
@@ -100,6 +101,7 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
+                <td>Nome x</td>
                 <td>Marca x</td>
                 <td>Modelo x</td>
                 <td>Ano x</td>
@@ -108,6 +110,7 @@
               </tr>
               <tr>
                 <th scope="row">2</th>
+                <td>Nome x</td>
                 <td>Marca x</td>
                 <td>Modelo x</td>
                 <td>Ano x</td>
@@ -116,6 +119,7 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
+                <td>Nome x</td>
                 <td>Marca x</td>
                 <td>Modelo x</td>
                 <td>Ano x</td>
@@ -124,6 +128,7 @@
               </tr>
               <tr>
                 <th scope="row">4</th>
+                <td>Nome x</td>
                 <td>Marca x</td>
                 <td>Modelo x</td>
                 <td>Ano x</td>
@@ -132,6 +137,7 @@
               </tr>
               <tr>
                 <th scope="row">5</th>
+                <td>Nome x</td>
                 <td>Marca x</td>
                 <td>Modelo x</td>
                 <td>Ano x</td>
@@ -144,6 +150,129 @@
       </div>
     </div>
   </div>
+</div>
+
+<hr>
+
+
+<div class="box">
+  <div class="tarja">
+      <h4>Encontrar acessórios</h4>
+  </div>        
+<br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <form action="">
+          <div class="col-6">
+              <label>Marca</label>
+              <select class="form-control" id="state" class="form-control" data-bind="options: userState">
+                 
+                  <option value="">Selecione</option>
+                  <option value="">Marca 1</option>
+                  <option value="">Marca 2</option>
+                  <option value="">Marca 3</option>
+                  <option value="">Marca 4</option>
+                  <option value="">Marca 5</option>
+                  <option value="">Marca 6</option>
+              </select>
+          </div>
+      
+          <div class="col-6">
+              <label>Modelo</label>
+              <select class="form-control" id="state" class="form-control" data-bind="options: userState">
+                 
+                  <option value="">Selecione</option>
+                  <option value="">Modelo 1</option>
+                  <option value="">Modelo 2</option>
+                  <option value="">Modelo 3</option>
+                  <option value="">Modelo 4</option>
+                  <option value="">Modelo 5</option>
+                  <option value="">Modelo 6</option>
+              </select>
+          </div>
+  
+          <div class="col-6">
+              <label>Faixa de preços</label>
+              <select class="form-control" id="state" class="form-control" data-bind="options: userState">
+                 
+                  <option value="">Selecione</option>
+                  <option value="">R$ 0,00 à 10,00</option>
+                  <option value="">R$ 10,00 à 50,00</option>
+                  <option value="">R$ 50,00 à 100,00</option>
+                  <option value="">R$ 100,00 à 500,00</option>
+                  <option value="">R$ 500,00 à 1.000,00</option>
+                  <option value="">R$ 1.000,00 à 2.000,00</option>
+                  <option value="">Acima de R$ 2.000,00</option>
+              </select>
+          </div>
+<br>
+<br>
+      <div class="search" style="width: 270px;">
+          <a href="#" class="orange-ac btn btn-success d-flex justify-content-center">Buscar</a>
+      </div>
+      </form>
+    </div>
+    <div class="col-sm">
+      <table class="table table-striped col-6 float-right">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nome</th>
+              <th scope="col">Marca</th>
+              <th scope="col">Modelo</th>
+              <th scope="col">Preço</th>
+              <th scope="col">Remover</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Nome x</td>
+              <td>Marca x</td>
+              <td>Modelo x</td>
+              <td>Preço x</td>
+              <td><button class="btn btn-danger">Remover</button></td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Nome x</td>
+              <td>Marca x</td>
+              <td>Modelo x</td>
+              <td>Preço x</td>
+              <td><button class="btn btn-danger">Remover</button></td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Nome x</td>
+              <td>Marca x</td>
+              <td>Modelo x</td>
+              <td>Preço x</td>
+              <td><button class="btn btn-danger">Remover</button></td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>Nome x</td>
+              <td>Marca x</td>
+              <td>Modelo x</td>
+              <td>Preço x</td>
+              <td><button class="btn btn-danger">Remover</button></td>
+            </tr>
+            <tr>
+              <th scope="row">5</th>
+              <td>Nome x</td>
+              <td>Marca x</td>
+              <td>Modelo x</td>
+              <td>Preço x</td>
+              <td><button class="btn btn-danger">Remover</button></td>
+            </tr>
+           
+          </tbody>
+        </table>
+    </div>
+  </div>
+</div>
 
 
 
