--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -28,14 +28,12 @@
           </div>
         </div>
 <br>
-        <div class="input-group">
-          <div class="input-group-prepend">
-            <div class="input-group-text">
-            <input type="radio" aria-label="Radio button for following text input">
-            </div>
-          </div>
-         <p class="remember-password">Lembrar senha</p>
-        </div>
+<div class="form-check">
+  <input type="checkbox" class="ckeck form-check-input" id="dropdownCheck">
+  <label class="remember-password form-check-label" for="dropdownCheck">
+    Lembrar senha
+  </label>
+</div>
 
         <div class="row d-flex justify-content-center">
           <div class="buttons col-12 col-sm-3 mt-4 text-center">
